--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "author": "Cameron Bytheway <cameron@nujii.com>",
   "license": "MIT",
   "readmeFilename": "README.md",
+  "dependencies": {
+    "debug": "~0.7.2"
+  },
   "devDependencies": {
     "should": "~1.2.2",
     "mocha": "~1.8.2"
